--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
 }
-
+/* 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -17,7 +17,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
 .App-link {
   color: #61dafb;
@@ -30,4 +30,26 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.nav {
+  margin-left: 50px;
+  justify-content: space-between;
+  font-size: 25px;
+}
+
+
+.quoteCard {
+  background:  whitesmoke;
+  box-shadow:  0 1px 3px rgba(0,0,0,0,0.12), 0 1px 2px rgba(0,0,0,0,0.24);
+  transition:  all 0.3s cubic-bezier(.25,.8,.25,1);
+  width:  30%;
+  display:  inline-block;
+  margin-bottom: 1.5%;
+  margin-left: 1.5%;
+
+}
+
+.ItemCard:hover{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
