--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color:  white;
 }
 /* 
 .App-logo {
@@ -52,4 +53,8 @@
 
 .ItemCard:hover{
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+a.active {
+  color:  green;
 }
