--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@
 .nav {
   margin-left: 50px;
   justify-content: space-between;
-  font-size: 25px;
+  font-size: 30px;
 }
 
 
@@ -44,10 +44,10 @@
   background:  whitesmoke;
   box-shadow:  0 1px 3px rgba(0,0,0,0,0.12), 0 1px 2px rgba(0,0,0,0,0.24);
   transition:  all 0.3s cubic-bezier(.25,.8,.25,1);
-  width:  30%;
-  display:  inline-block;
+  width:  25%;
   margin-bottom: 1.5%;
   margin-left: 1.5%;
+  border-color: black;
 
 }
 
@@ -57,4 +57,8 @@
 
 a.active {
   color:  green;
+}
+
+.link {
+  color:  black;
 }
