--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   background-color:  white;
+  height: 50vh;
 }
 /* 
 .App-logo {
@@ -24,14 +25,14 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 .nav {
   margin-left: 50px;
@@ -44,10 +45,11 @@
   background:  whitesmoke;
   box-shadow:  0 1px 3px rgba(0,0,0,0,0.12), 0 1px 2px rgba(0,0,0,0,0.24);
   transition:  all 0.3s cubic-bezier(.25,.8,.25,1);
-  width:  25%;
+  width:  30%;
   margin-bottom: 1.5%;
   margin-left: 1.5%;
   border-color: black;
+
 
 }
 
@@ -62,3 +64,8 @@ a.active {
 .link {
   color:  black;
 }
+/* .wrapper {
+  display: grid;
+  grid-template-columns: repeat(1, 5fr);
+  grid-auto-rows: 100px;
+} */
