--- a/src/components/QuickCard.css
+++ b/src/components/QuickCard.css
@@ -2,13 +2,14 @@
 	background:  whitesmoke;
 	box-shadow:  0 1px 3px rgba(0,0,0,0,0.12), 0 1px 2px rgba(0,0,0,0,0.24);
 	transition:  all 0.3s cubic-bezier(.25,.8,.25,1);
-	width:  35%;
-	display:  inline-block;
+	width:  33%;
+/* 	display:  inline-block; */
 	margin-bottom: 1.5%;
-	margin-left: 1.5%;
-	display:  inline-block;
+	margin-left: 5%;
 	padding:  2%;
 	font-family: 'Darker Grotesque', sans-serif;
+	display:  auto-fill;
+
 
 }
 
