--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,18 @@
 .App {
   text-align: center;
-  background-color:  white;
-  height: 50vh;
+  background-color:  #FFFFF0;
+}
+
+.myQuotes {
+  display:  flexwrap;
+  flex-direction:  row;
+}
+
+
+html, body {
+    margin: 0;
+    height: 100%;
+    background-color:  #FFFFF0;
 }
 /* 
 .App-logo {
