--- a/src/components/QuickCard.css
+++ b/src/components/QuickCard.css
@@ -1,14 +1,14 @@
 .QuickCard {
-	background:  whitesmoke;
+	background-color:  whitesmoke;
+	background-image: url("%PUBLIC_URL%/index.png");
 	box-shadow:  0 1px 3px rgba(0,0,0,0,0.12), 0 1px 2px rgba(0,0,0,0,0.24);
 	transition:  all 0.3s cubic-bezier(.25,.8,.25,1);
 	width:  33%;
-/* 	display:  inline-block; */
+	display:  inline-block;
 	margin-bottom: 1.5%;
 	margin-left: 5%;
 	padding:  2%;
 	font-family: 'Darker Grotesque', sans-serif;
-	display:  auto-fill;
 
 
 }
