--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color:  #FFFFF0;
+  background-color:  whitesmoke;
 }
 
 .myQuotes {
@@ -12,7 +12,7 @@
 html, body {
     margin: 0;
     height: 100%;
-    background-color:  #FFFFF0;
+    background-color:  whitesmoke;
 }
 /* 
 .App-logo {
@@ -55,6 +55,10 @@ html, body {
   text-decoration: none;
 }
 
+.nav-link {
+  color:  black;
+}
+
 
 .quoteCard {
   background:  whitesmoke;
@@ -73,7 +77,7 @@ html, body {
 }
 
 a.active {
-  color:  green;
+  color:  red;
 }
 
 .link {
