--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,10 @@ html, body {
   color: #61dafb;
 }
 
+.nav-link {
+  font-family: 'Homemade Apple', cursive;
+}
+
 /* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -72,6 +76,7 @@ html, body {
 
 }
 
+
 .ItemCard:hover{
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
@@ -82,6 +87,7 @@ a.active {
 
 .link {
   color:  black;
+  text-decoration: none;
 }
 
 .button-link {
