--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,20 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
 
 .myQuotes {
-  display:  flexwrap;
-  flex-direction:  row;
+	display: flexwrap;
+	flex-direction: row;
 }
 
-
-html, body {
-  margin: 0;
-  background-image:  url("/images/joanna-kosinska-78uNJt1kPw8-unsplash.jpg"); 
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100%;
+html,
+body {
+	margin: 0;
+	background: white;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100%;
 }
 /* 
 .App-logo {
@@ -35,11 +35,11 @@ html, body {
 } */
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
 .nav-link {
-  font-family: 'Homemade Apple', cursive;
+	font-family: 'Homemade Apple', cursive;
 }
 
 /* @keyframes App-logo-spin {
@@ -52,53 +52,50 @@ html, body {
 } */
 
 .nav {
-  margin-left: 50px;
-  justify-content: space-between;
-  font-size: 30px;
+	margin-left: 50px;
+	justify-content: space-between;
+	font-size: 30px;
 }
 
-.nav-link:hover{
-  text-decoration: none;
+.nav-link:hover {
+	text-decoration: none;
 }
 
 .nav-link {
-  color:  black;
+	color: black;
 }
-
 
 .quoteCard {
-  background:  whitesmoke;
-  box-shadow:  0 1px 3px rgba(0,0,0,0,0.12), 0 1px 2px rgba(0,0,0,0,0.24);
-  transition:  all 0.3s cubic-bezier(.25,.8,.25,1);
-  width:  30%;
-  margin-bottom: 1.5%;
-  margin-left: 1.5%;
-  border-color: black;
-
-
+	background: whitesmoke;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0, 0.24);
+	transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+	width: 30%;
+	margin-bottom: 1.5%;
+	margin-left: 1.5%;
+	border-color: black;
+	height: 100%;
 }
 
-
-.ItemCard:hover{
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+.ItemCard:hover {
+	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 a.active {
-  color:  red;
+	color: red;
 }
 
 .link {
-  color:  black;
-  text-decoration: none;
+	color: black;
+	text-decoration: none;
 }
 
 .button-link {
-  color:  white;
+	color: white;
 }
 
 .button-link:hover {
-  color:  white;
-  text-decoration: none;
+	color: white;
+	text-decoration: none;
 }
 /* .wrapper {
   display: grid;
