change main font

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ body {
 }
 
 .nav-link {
-	font-family: 'Homemade Apple', cursive;
+	font-family: 'Special Elite', cursive;
 }
 
 /* @keyframes App-logo-spin {
