--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
 	margin: 0;
-	height: 100%;
+	height: 0;
 	font-family: 'Special Elite', cursive;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
