--- a/src/components/quotes/QuickCard.css
+++ b/src/components/quotes/QuickCard.css
@@ -1,22 +1,20 @@
 .QuickCard {
-	background-color:  white;
-	box-shadow:  0 1px 3px rgba(0,0,0,0,0.12), 0 1px 2px rgba(0,0,0,0,0.24);
-	transition:  all 0.3s cubic-bezier(.25,.8,.25,1);
-	width:  33%;
+	background-color: white;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0, 0.24);
+	transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+	width: 33%;
 	height: auto;
-	display:  inline-block;
+	display: inline-block;
 	padding: auto;
-/* 	margin-bottom: 1.5%;
+	/* 	margin-bottom: 1.5%;
 	margin-left: 5%;
 	padding:  2%; */
 	margin: 2%;
 	padding: 2%;
 	display: flex-wrap;
-	font-family: 'Darker Grotesque', sans-serif;
-
-
+	font-family: 'Special Elite', cursive;
 }
 
-.QuickCard:hover{
-	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+.QuickCard:hover {
+	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
