--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -2,3 +2,17 @@
 	width: 30%;
 	display: inline-block;
 }
+
+.success {
+	background-color: black;
+}
+
+.success:hover {
+	background-color: red;
+}
+
+.quotes {
+	display: flex;
+	justify-content: center;
+	height: auto;
+}
