--- a/src/components/quotes/QuickCard.css
+++ b/src/components/quotes/QuickCard.css
@@ -1,8 +1,9 @@
 .QuickCard {
-	background-color: white;
+	background-color: rgba(217, 234, 243, 0.61);
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0, 0.24);
 	transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 	width: 33%;
+	border-radius: 10%;
 	height: auto;
 	display: inline-block;
 	padding: auto;
@@ -16,5 +17,6 @@
 }
 
 .QuickCard:hover {
-	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+	box-shadow: 0 14px 28px rgba(184, 3, 3, 0.664),
+		0 10px 10px rgba(0, 0, 0, 0.22);
 }
