--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@ body {
 
 .nav-link {
 	font-family: 'Special Elite', cursive;
+	color: black;
 }
 
 /* @keyframes App-logo-spin {
@@ -59,10 +60,7 @@ body {
 
 .nav-link:hover {
 	text-decoration: none;
-}
-
-.nav-link {
-	color: black;
+	color: blue;
 }
 
 .quoteCard {
