--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-	text-align: center;
-}
-
 .myQuotes {
 	display: flexwrap;
 	flex-direction: row;
@@ -10,15 +6,30 @@
 html,
 body {
 	margin: 0;
-	background: white;
+	background: whitesmoke;
 	background-position: center;
+
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 100%;
+	text-align: center;
 }
 
-.App-link {
-	color: #61dafb;
+.container {
+	border: 1px solid black;
+}
+
+.btn-success {
+	background: black;
+	border: black;
+}
+.btn-success:hover {
+	background: red;
+	border: black;
+}
+.btn-secondary.focus,
+.btn-success:focus {
+	box-shadow: 0 0 0 0.2rem red;
 }
 
 .nav-link {
@@ -28,8 +39,17 @@ body {
 
 .nav {
 	margin-left: 50px;
-	justify-content: space-between;
-	font-size: 30px;
+	justify-content: space-evenly;
+	font-size: 25px;
+}
+
+@media only screen and (max-width: 750px) {
+	.nav {
+		font-size: 5px;
+	}
+	.nav-link {
+		font-size: 5px;
+	}
 }
 
 .nav-link:hover {
