--- a/src/components/quotes/QuickCard.css
+++ b/src/components/quotes/QuickCard.css
@@ -2,7 +2,7 @@
 	background-color: rgba(217, 234, 243, 0.61);
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0, 0.24);
 	transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-	width: 33%;
+	width: 30vw;
 	border-radius: 10%;
 	height: auto;
 	display: inline-block;
@@ -19,4 +19,9 @@
 .QuickCard:hover {
 	box-shadow: 0 14px 28px rgba(184, 3, 3, 0.664),
 		0 10px 10px rgba(0, 0, 0, 0.22);
+}
+@media only screen and (max-width: 750px) {
+	.QuickCard {
+		width: auto;
+	}
 }
