--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,7 @@
 html,
 body {
-	margin: 0;
+	/* margin: 0; */
 	background: whitesmoke;
-	background-position: center;
-
-	background-repeat: no-repeat;
-	background-size: cover;
 	height: 100%;
 	text-align: center;
 }
