--- a/src/components/quotes/MyQuotes.css
+++ b/src/components/quotes/MyQuotes.css
@@ -1,12 +1,10 @@
 .myQuotes {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-around;
-	flex-direction: row;
-}
-
-@media only screen and (max-width: 750px) {
-	.myQuotes {
-		flex-direction: column;
-	}
+	flex-basis: auto;
+	justify-content: center;
+	box-shadow: 0 14px 28px rgba(162, 154, 154, 0.664),
+		0 10px 10px rgba(0, 0, 0, 0.22);
+	padding: 1%;
+	margin: 5%;
 }
