--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
 }
 #root {
 	height: 100%;
+	margin: 5%;
 }
 .container {
 	border: 1px solid black;
@@ -39,14 +40,15 @@ body {
 		0 10px 10px rgba(0, 0, 0, 0.22);
 	justify-content: space-evenly;
 	font-size: 25px;
+	position: sticky;
 }
 
 @media only screen and (max-width: 950px) {
 	.nav {
-		font-size: 20px;
+		font-size: 15px;
 	}
 	.nav-link {
-		font-size: 20px;
+		font-size: auto;
 	}
 	h1 {
 		font-size: 1.5rem;
@@ -60,6 +62,8 @@ body {
 .nav-link:hover {
 	text-decoration: none;
 	color: blue;
+	box-shadow: 0 14px 28px rgba(162, 154, 154, 0.664),
+		0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .quoteCard {
