--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,12 @@ body {
 	background: whitesmoke;
 	height: 100%;
 	text-align: center;
+	padding: 0;
+	margin: 0;
 }
 #root {
 	height: 100%;
-	margin: 5%;
+	margin: 0 5%;
 }
 .container {
 	height: 100%;
