edit navbar shadow

--- a/src/App.css
+++ b/src/App.css
@@ -63,8 +63,7 @@ body {
 .nav-link:hover {
 	text-decoration: none;
 	color: blue;
-	box-shadow: 0 14px 28px rgba(162, 154, 154, 0.664),
-		0 10px 10px rgba(0, 0, 0, 0.22);
+	box-shadow: 0 5px rgba(162, 154, 154, 0.664), 0 10px rgba(0, 0, 0, 0.22);
 }
 
 .quoteCard {
